--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gulp-postcss": "9.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sourcemaps": "3.0.0",
-    "gulp-uglify-es": "^2.0.0",
+    "gulp-uglify": "^3.0.2",
     "postcss": "8.1.7",
     "postcss-csso": "^5.0.0",
     "stylelint": "13.7.2",
